@@ -469,6 +469,7 @@ Nicolas François                    nicolas.francois@centraliens.net
 Niklas Edmundsson                   nikke@acc.umu.se
 Nikola Milutinovic                  Nikola.Milutinovic@ev.co.yu
 Nikolaus Rath                       Nikolaus@rath.org
+Nikos Mavrogiannopoulos             nmav@redhat.com
 Nima Nikzad                         nnikzad@ucla.edu
 Noah Friedman                       friedman@splode.com
 Noel Cragg                          noel@red-bean.com
