@@ -37,6 +37,7 @@ gnulib_modules="
   linked-list
   backupfile
   base64
+  base32
   buffer-lcm
   c-strcase
   c-strtod
