@@ -1,0 +1,4 @@
+[NAME]
+base32 \- base32 encode/decode data and print to standard output
+[DESCRIPTION]
+.\" Add any additional description here
